@@ -1,3 +1,10 @@
+2008-02-10  Vincent Untz  <vuntz@gnome.org>
+
+	Continue gio port...
+
+	* menu.c: (drag_data_get_menu_cb): simplify with g_filename_to_uri()
+	* panel.c: (drop_urilist): port the function to gio
+
 2008-02-09  Vincent Untz  <vuntz@gnome.org>
 
 	Port menu.c to gio.
